2004-07-04  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/thread.c (xnthread_symbolic_status): Add helper function
	to convert a thread status word into its symbolic
	(i.e. human-readable) representation.

2004-07-01  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_relax): Do not hold the nucleus
	superlock while performing the Linux scheduling tail; just lock
	the local IRQs out.

2004-06-30  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_kick_process): Do not hold the
	nucleus superlock while sending the scheduling request to the high
	stage.

2004-06-30  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.2

2004-06-30  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/cruncher: Add a test measuring the nanosleep() and
	execution time jitters w/ and w/o RTAI/fusion.

2004-06-29  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion.c (__pthread_shadow_helper): Protect the mapping
	phase from asynchronous deletion of the new shadow thread.

	* skins/rtai/syscall.c (__rt_task_create): Downgrade the lock held
	during xnshadow_map() from global (nucleus superlock) to local
	(IRQ masking).

	* skins/rtai/cond.c: Add Doxygen documentation of services.

	* include/nucleus/asm-i386/system.h (xnarch_setimask): Inline it.

	* nucleus/module.c: Export missing symbols.

2004-06-29  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/shadow.c (xnshado_map, xnshadow_attach_skin,
	xnshadow_unmap): Fix the skin reference counting.
		
2004-06-28  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade the x86 patch to 2.6.7r6c1. Discard
	older r5 patches since critical fixes are brought by this one,
	Linux-wise and Adeos-wise.

	* arch/i386/hal/hal.c (rthal_trap_fault): Handle RTAI-originated
	faults in kernel space caused by on-demand virtual memory
	mappings.

	* nucleus/shadow.c: Import SMP-related changes.

	* skins/rtai/pipe.c (rt_pipe_open): Set magic number.
