@@ -7,4 +7,5 @@ libfusion_a_SOURCES = fusion.c
 libfusion_a_CPPFLAGS = \
 	@RTAI_USER_CFLAGS@ \
 	-I$(top_srcdir)/include \
-	-I../../include
+	-I../../include -D_GNU_SOURCE -D_REENTRANT
+
